--- a/CSS/unidades-medidas/estilos.css
+++ b/CSS/unidades-medidas/estilos.css
@@ -2,17 +2,70 @@
     margin: 0;
     box-sizing: border-box;
 }
-body{
-    font-family: Arial, Helvetica, sans-serif
-    ;
+
+html{
+     font-size: 16px; /*este valor html lo trae predefinido */
+    /* por lo tanto 1em=16px */
 }
 
-.article__title{
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    height: 100vh;
+    min-height: 300vh;
+}
 
+.main{
+    /* vw (view por width), vh (view por height) */
+    /* width: 90vw;
+    height: 40vh; */
+    width: 90%;
+    height: 15%;
+    background-color: #e22b8d;
+}
+
+.main__title{
+    /*em, rem*/
+    font-size: 2rem;
 }
 
 .img{
-    width: 300px;
+    width: 50px;
     /*puede establecerse en  px,cm,mm,pt*/
-    
+
+}
+
+.card{
+    margin: 40px auto;
+    width: 300px;
+    padding: 1rem;
+    border-radius: 10px;
+    background-color: #15273f;
+
+    box-shadow: 10px 10px 10px -1px #15273f9a;
+    color: white;
+}
+.card__img{
+    width: 100%;
+    border-radius: inherit;
+}
+
+.card__title{
+    margin: .8rem 0 .6rem;
+}
+
+.card__paragraph{
+    line-height: 1.5;
+}
+
+.card__cta{
+    background-color: darksalmon;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 1rem 0;
+    display: block;
+    width: 200px;
+    margin: 20px auto;
+    text-align: center;
+    border-radius: 50px;
 }
