--- a/CSS/position/style.css
+++ b/CSS/position/style.css
@@ -64,8 +64,8 @@ body{
 }
 
 .parentz{
-    margin: 30px auto;
-    width: 350px;
+    margin: 30px 20vw 0 20vw;
+    width: 60vw;
     padding: 1rem;
     background-color: rgb(21, 241, 87);
     position: relative;
@@ -73,10 +73,11 @@ body{
 
 .relativez{
     position: relative;
-    top: 2px;
+    top: 10px;
+    right: -50px ;
     /* margin-top: 200px; esto los desplaza a todos */
     /* bottom: ;
-    right: ;
+    
     left: ; */
     z-index: 30;
 }
@@ -92,7 +93,7 @@ body{
 .fixedz{
     background-color: rgb(235, 113, 198);
     position: fixed;
-    left: 80px;
+    left: 24vw;
     bottom: 400px;
     /* right: ;
     left: ;  */
