--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,13 @@
 
 }
 
+html {
+    text-size-adjust: 100%;
+}
+
 body {
     margin: 55 118;
-    background-image: linear-gradient( rgba(234, 50, 139, 0.532) , white);
+    background-image: linear-gradient(rgba(234, 50, 139, 0.532), white);
     min-height: 800px;
 }
 
@@ -14,7 +18,6 @@ body {
 .nav {
     height: 50px;
     width: 90%;
-    background-color: blueviolet;
 
     display: flex;
     align-items: center;
@@ -22,14 +25,14 @@ body {
     margin: 40px auto;
 }
 
-.nav__title{
+.nav__title {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 15%;
+    width: 200px;
     padding: 15px, 10px;
     height: 40px;
-    background-image: linear-gradient(red, blue) ;
+    background-image: linear-gradient(red, blue);
     border-radius: 40px;
     color: white;
 }
@@ -42,17 +45,68 @@ body {
 }
 
 
-.header__menu--link{
+.header__menu--link {
     text-decoration: none;
 }
 
-.header__menu--button{
+.header__menu--button {
     background-color: black;
     color: white;
     border-radius: 40px;
     height: 30px;
     width: 70px;
-} 
+}
 
 
 /*content*/
+.cont {
+    width: 90%;
+    height: 200px;
+    display: flex;
+    border-radius: 40px;
+}
+
+.html {
+    background-color: red;
+}
+
+.html__logo {
+    width: 200px;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.html__logo--logo{
+    width: 90%;
+    height: 80%;
+}
+
+.html__text{
+    color: rgb(255, 255, 255);
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.html__contents {
+    width: 100%;
+    height: 100%;
+    max-width: 1500px;
+    display: flex;
+    align-items: center;
+}
+
+.link {
+    list-style: none;
+    display: inline-block;
+    padding: 30px 20px;
+}
+
+.link__l {
+    color: rgb(255, 255, 255);
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 20px;
+    text-decoration: none;
+}
