--- a/styles.css
+++ b/styles.css
@@ -64,13 +64,18 @@ body {
     height: 200px;
     display: flex;
     border-radius: 40px;
+    margin-bottom: 30px;
 }
 
 .html {
     background-color: red;
 }
 
-.html__logo {
+.css{
+    background-color: blue;
+}
+
+.cont__logo {
     width: 200px;
     height: 200px;
     display: flex;
@@ -78,18 +83,18 @@ body {
     flex-direction: column;
 }
 
-.html__logo--logo{
+.cont__logo--logo{
     width: 90%;
     height: 80%;
 }
 
-.html__text{
+.cont__text{
     color: rgb(255, 255, 255);
     font-size: 24px;
     font-weight: 700;
 }
 
-.html__contents {
+.cont__contents {
     width: 100%;
     height: 100%;
     max-width: 1500px;
