--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,7 @@ html {
 
 body {
     margin: 55 118;
-    background-image: linear-gradient(rgba(234, 50, 139, 0.532), white);
-    min-height: 800px;
+    background-image: linear-gradient(252.59deg, rgba(252, 152, 152, .8) 0%, rgba(255, 255, 255, .78) 57%, rgba(72, 207, 250, .49) 100%);
 }
 
 /*header*/
@@ -25,16 +24,46 @@ body {
     margin: 40px auto;
 }
 
-.nav__title {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 200px;
-    padding: 15px, 10px;
-    height: 40px;
-    background-image: linear-gradient(red, blue);
+/*botón gradiente*/
+.title__border{
+    width: 100%;
+    height: 75px;
+    max-width: 345px;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    background-image: linear-gradient(35.37deg, rgba(0, 15, 255, .87) 11%, #fa0909 27%);
+    border: 3px solid #000;
     border-radius: 40px;
-    color: white;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin: 0;
+}
+
+.title{
+    width: 100%;
+    height: 60px;
+    max-width: 330px;
+    background-color: #060606;
+    border: 3px solid #000;
+    border-radius: 40px;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+}
+
+.frame{
+    width: 100%;
+    max-width: 330px;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+}
+
+.text{
+    color: #fff;
+    font-size: 32px;
+    font-weight: 700;
 }
 
 .header__menu {
@@ -42,6 +71,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0;
 }
 
 
@@ -85,7 +115,7 @@ body {
 
 .cont__logo--logo{
     width: 90%;
-    height: 80%;
+    height: 85%;
 }
 
 .cont__text{
@@ -114,4 +144,23 @@ body {
     font-weight: 700;
     line-height: 20px;
     text-decoration: none;
+}
+
+/*footer*/
+.footer{
+    background-color: #F5F7FA;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
+
+.info{
+    margin: 26px 0 13px;
+}
+
+.copy-right{
+    margin: 13px 0 26px 0;
 }
